# swarm_drone_framework

./: RULES.md  diagnostics_audit.py  main_dashboard.py  pyproject.toml  requirements.txt  verify_patches.py
Documents/: Forensic Analysis of Swarm Autonomy Literature (2).docx  Forensic Summary of Changes.docx  Literature Survey (2) (2).xlsx  Literature Survey on Swarm Autonomy.docx  Novel System-Level Integration Analysis (1).docx  Swarm Autonomy Framework Research Analysis (1).docx  Swarm Dashboard Engineering Blueprint (1)-1.docx  Swarm Drone Autonomy System Guide.docx
examples/: 01_kernel_demo.py
experiments/: run_energy_cascade.py  run_percolation.py  run_stability_test.py  runner.py
logs/: experiment_1_percolation.csv  experiment_2_thermodynamics.csv  experiment_3_stability.csv  experiment_3_stability_run_A.csv  experiment_3_stability_run_B.csv
outputs/: runs_index.json
src/: __init__.py  simulation.py
tests/: conftest.py  test_adaptive_panel.py  test_anomaly_detector.py  test_attack_panel.py  test_auction.py  test_consensus.py  test_controls.py  test_coverage.py  test_energy.py  test_energy_cascade.py  test_energy_heatmap.py  test_event_fusion.py  test_event_logger.py  test_experiment_runner.py  test_exporter.py  test_graphs.py  test_hybrid_supervisor.py  test_kernel.py  test_main_window.py  test_mission_playback.py  test_network_viewer.py  test_no_global_access.py  test_packet_drop.py  test_percolation.py  test_percolation_shock.py  test_performance.py  test_regime_detection.py  test_regime_panel.py  test_replay.py  test_research_metrics.py  test_rgg.py  (+14 more)
(+96 files in other folders)
